bin = [
  { name = "main", path = "src/main.rs" },
  { name = "day_1", path = "src/2025/day_1.rs" },
  { name = "day_2", path = "src/2025/day_2.rs" },
  { name = "day_3", path = "src/2025/day_3.rs" },
  { name = "day_4", path = "src/2025/day_4.rs" },
]

[package]
name = "Advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
